Upper Extra space fix

--- a/kitchen-kindness/css/style.css
+++ b/kitchen-kindness/css/style.css
@@ -10,6 +10,7 @@
 
 .cco_templateless_template {
   opacity: 0;
+  max-height: 0;
 }
 
 body {
